--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Docker Hub login
         run: docker login --username ${{ secrets.USERNAME_HUB }} --password ${{ secrets.PASSWORD_HUB }}
       - name: Docker build
-        run: docker build --tag ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME:latest
+        run: docker build --tag ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME:latest .
       - name: Docker push
         run: docker push ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME:latest
 
