--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,9 @@ jobs:
           mkdir ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 400 ~/.ssh/id_rsa
-          eval ${ssh-agent}
-          ssh-add ~/.ssh/id_rsa
       - name: Deploy to server
         run: |
-          ssh -o StrictHostKeyChecking=no -A ${{ secrets.BASTION_USER }}@${{ secrets.BASTION_HOST }} 'sudo docker stop $PROJECT_NAME; sudo docker rm $PROJECT_NAME; sudo docker rmi ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME; sudo docker run -d -p $EXTERNAL_PORT:$APP_PORT --name $PROJECT_NAME ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME:latest;'
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -A ${{ secrets.BASTION_USER }}@${{ secrets.BASTION_HOST }} 'sudo docker stop $PROJECT_NAME; sudo docker rm $PROJECT_NAME; sudo docker rmi ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME; sudo docker run -d -p $EXTERNAL_PORT:$APP_PORT --name $PROJECT_NAME ${{ secrets.USERNAME_HUB }}/$PROJECT_NAME:latest;'
 
     
 
