--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,9 @@
 server {
-  listen       80;
+  listen       443;
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html =404;
   }
+  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
 }
