--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,4 +6,8 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
   ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers  "RC4:HIGH:!aNULL:!MD5:!kEDH";
+  add_header Strict-Transport-Security 'max-age=604800';
+  ssl_certificate      cert.crt;
+  ssl_certificate_key  private.key;
 }
