--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,10 @@
 server {
-  listen       443;
+  listen 80 default_server;
+  listen [::]:80 default_server;
+  listen 443 ssl http2 default_server;
+  listen [::]:443 ssl http2 default_server;
+
+  server_name 1218407-cu57808.tw1.ru
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
