--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
   listen 443 ssl http2 default_server;
   listen [::]:443 ssl http2 default_server;
 
-  server_name 1218407-cu57808.tw1.ru
+  server_name 1218407-cu57808.tw1.ru;
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
