--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,18 @@
 server {
-  listen 80 default_server;
-  listen [::]:80 default_server;
-  listen 443 ssl http2 default_server;
-  listen [::]:443 ssl http2 default_server;
-
+  server_name api.1218407-cu57808.tw1.ru;
+  listen 80;
+  location / {
+    proxy_set_header Host $host;
+    proxy_pass http://gateway:8080;
+    proxy_redirect off;
+  }
+}
+server {
   server_name 1218407-cu57808.tw1.ru;
+  listen 80;
+  listen [::]:80;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
