--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server {
-  server_name api.1218407-cu57808.tw1.ru;
+  server_name api.1218407-cu57808.tw1.ru, monitoring.1218407-cu57808.tw1.ru;
   listen 80;
   location / {
     proxy_set_header Host $host;
