--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,19 @@
 server {
   server_name api.1218407-cu57808.tw1.ru, monitoring.1218407-cu57808.tw1.ru;
   listen 80;
+  listen [::]:80;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
   location / {
     proxy_set_header Host $host;
     proxy_pass http://gateway:8080;
     proxy_redirect off;
   }
+  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers  "RC4:HIGH:!aNULL:!MD5:!kEDH";
+  add_header Strict-Transport-Security 'max-age=604800';
+  ssl_certificate      cert.crt;
+  ssl_certificate_key  private.key;
 }
 server {
   server_name 1218407-cu57808.tw1.ru;
