--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,5 @@
 server {
-  server_name api.1218407-cu57808.tw1.ru, monitoring.1218407-cu57808.tw1.ru;
-  listen 80;
-  listen [::]:80;
+  server_name api.1218407-cu57808.tw1.ru;
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
   location / {
