--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
   listen [::]:443 ssl http2;
   location / {
     proxy_set_header Host $host;
-    proxy_pass http://gateway:8080;
+    proxy_pass https://gateway:8080;
     proxy_redirect off;
   }
   ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
