--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,21 @@ server {
   ssl_certificate_key  private.key;
 }
 server {
+  server_name sso.1218407-cu57808.tw1.ru;
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  location / {
+    proxy_set_header Host $host;
+    proxy_pass https://keycloak:8080;
+    proxy_redirect off;
+  }
+  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers  "RC4:HIGH:!aNULL:!MD5:!kEDH";
+  add_header Strict-Transport-Security 'max-age=604800';
+  ssl_certificate      cert.crt;
+  ssl_certificate_key  private.key;
+}
+server {
   server_name 1218407-cu57808.tw1.ru;
   listen 80;
   listen [::]:80;
