--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,7 @@
 server {
   server_name api.1218407-cu57808.tw1.ru;
+  listen 80;
+  listen [::]:80;
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
   location / {
@@ -17,6 +19,8 @@ server {
   server_name sso.1218407-cu57808.tw1.ru;
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
+  listen 80;
+  listen [::]:80;
   location / {
     proxy_set_header Host $host;
     proxy_pass https://keycloak:8080;
