--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ server {
   listen [::]:80;
   location / {
     proxy_set_header Host $host;
-    proxy_pass https://keycloak:8080;
+    proxy_pass http://keycloak:8080;
     proxy_redirect off;
   }
   ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
