--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
-    "@mui/x-data-grid": "^6.0.0",
+    "@mui/x-data-grid": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0"
+    "@types/leaflet": "^1.9.0",
+    "@types/validator": "^13.7.13"
   }
 }
