--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.11",
+    "@mui/material": "^5.11.12",
+    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/system": "^5.11.12",
     "@mui/x-data-grid": "^6.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -25,6 +27,7 @@
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.8",
     "typescript": "^4.9.4",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
